--- a/pbchf.ipynb
+++ b/pbchf.ipynb
@@ -1437,7 +1437,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Coulomb integrals"
+    "### Coulomb integrals\n",
+    "\n",
+    "Definition: \n",
+    "\n",
+    "\\begin{equation}\n",
+    "\t\\begin{aligned}\n",
+    "\t\t& J_{\\mu \\nu}^{\\mathbf{k}}=\\frac{1}{N_k} \\sum_{\\mathbf{k}_1} \\sum_{\\kappa \\lambda} \n",
+    "\t\tD_{\\lambda \\kappa}^{\\mathbf{k}_1}\n",
+    "\t\t\\left(\\phi_\\mu^{\\mathbf{k}_2} \\phi_\\nu^{\\mathbf{k}_2} \\mid \\phi_\\kappa^{\\mathbf{k}_1} \\phi_\\lambda^{\\mathbf{k}_1}\\right), \\\\\n",
+    "\t\\end{aligned}\n",
+    "\\end{equation}\n",
+    "\n",
+    "(Also see ERI with k points)\n",
+    "\n",
+    "Define $u_{ij}^{k_ik_j}(\\mathbf{r})=e^{-i(\\mathbf{k}_j-\\mathbf{k}_i)\\cdot\\mathbf{r}} \\phi_i^{k_i,\\ast}(\\mathbf{r}) \\phi_j^{k_j}(\\mathbf{r})$,\n",
+    "therefore $u_{ij}^{kk}(\\mathbf{r}+\\mathbf{L})=u_{ij}^{kk}(\\mathbf{r})=\\phi_i^{k,\\ast}(\\mathbf{r}) \\phi_j^{k}(\\mathbf{r})$. \n",
+    "Define \n",
+    "\\begin{equation}\n",
+    "\t\\rho_{ij}^{kk} (\\mathbf{G}) = \\int_\\Omega e^{-i \\mathbf{G}\\cdot\\mathbf{r}} u_{ij}^{kk}(\\mathbf{r}) d\\mathbf{r}\n",
+    "\\end{equation}\n",
+    "\n",
+    "Then \n",
+    "\n",
+    "\\begin{equation}\n",
+    "\t\\begin{split}\n",
+    "\t\t(\\phi_i^{k_2}\\phi_j^{k_2}|\\phi_k^{k_1}\\phi_l^{k_1})\n",
+    "\t\t= &\\int_{\\Omega}\n",
+    "\t\td\\mathbf{r}\n",
+    "\t\t\\int_{\\mathbb{R}^3} \n",
+    "\t\td\\mathbf{r'}\n",
+    "\t\t\\phi_i^{k_2,\\ast}(\\mathbf{r})\n",
+    "\t\t\\phi_j^{k_2}(\\mathbf{r}) \\frac{1}{|\\mathbf{r}-\\mathbf{r'}|} \n",
+    "\t\t\\phi_k^{k_1,\\ast}(\\mathbf{r'}) \\phi_l^{k_1}(\\mathbf{r'})  \\\\\n",
+    "\t\t= & \n",
+    "\t\t\\frac{1}{\\Omega}\n",
+    "\t\t\\sum_{\\mathbf{G}}\n",
+    "\t\t\\rho_{ij}^{k_2k_2}(-\\mathbf{G})\n",
+    "\t\t\\frac{4\\pi}{|\\mathbf{G}|^2}\n",
+    "\t\t\\rho_{kl}^{k_1k_1}(\\mathbf{G})\n",
+    "\t\\end{split}\n",
+    "\\end{equation}\n"
    ]
   },
   {
@@ -1468,7 +1508,11 @@
     "\n",
     "    vj_kpts = []\n",
     "    for k, kpt in enumerate(kpts2):\n",
-    "        vj = ________________\n",
+    "        aoR = get_ao_values(cell, kpt)\n",
+    "        pair_ao_real_space = np.einsum('xi,xj->xij', aoR.conj(), aoR)\n",
+    "        pair_ao_G_inv_space = ifft(pair_ao_real_space.reshape(-1,nao**2).T,\n",
+    "                               cell.mesh).T.reshape(-1,nao,nao) * cell.vol\n",
+    "        vj = w * np.einsum('xij,x,x->ij', pair_ao_G_inv_space, coulG, rhoG)\n",
     "        vj_kpts.append(vj)\n",
     "    vj_kpts = np.array(vj_kpts)\n",
     "    return vj_kpts\n",
@@ -1477,12 +1521,14 @@
     "    from pyscf.pbc import scf\n",
     "    return scf.KRHF(cell, kpts1).get_j(cell, dm, kpts=kpts1, kpts_band=kpts2)\n",
     "\n",
+    "TEST = 1\n",
+    "\n",
     "if TEST:\n",
-    "    kpts = cell.make_kpts([2,1,1]) # occupied k-points ? \n",
-    "    kpts2 = cell.make_kpts([1,3,1]) # general ? \n",
+    "    kpts = cell.make_kpts([2,1,1]) \n",
+    "    kpts2 = cell.make_kpts([1,3,1]) \n",
     "    dm = cell.pbc_intor('int1e_ovlp', kpts=kpts)\n",
     "    print(abs(get_j(cell, dm, kpts, kpts2)\n",
-    "              - get_j_ref(cell, dm, kpts, kpts2)).max()).max()\n",
+    "              - get_j_ref(cell, dm, kpts, kpts2)).max())\n",
     "    \n",
     "get_j = get_j_ref\n"
    ]
@@ -1491,7 +1537,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Integrals for XC functional"
+    "### Integrals for XC functional\n",
+    "\n",
+    "The total XC energy is a functional of electron density $\\rho$\n",
+    "\\begin{equation}\n",
+    "E_{xc} = \\int_\\Omega e_{xc}[\\rho]\\, \\rho(\\mathbf{r}) d\\mathbf{r}\n",
+    "\\end{equation}\n",
+    "$e_{xc}$ is the XC energy per particle, which can be evaluated by the function pyscf.dft.libxc.eval_xc.\n",
+    "\n",
+    "In the DFT method, one also needs to calculate the XC potential $V_{xc}(\\mathbf{r})$:\n",
+    "\\begin{equation}\n",
+    "V_{xc}(\\mathbf{r}) = \\frac{\\delta E_{xc}}{\\delta \\rho} = e_{xc}[\\rho] + \\frac{\\delta e_{xc}}{\\delta \\rho} \\rho(\\mathbf{r})\n",
+    "\\end{equation}\n",
+    "\n",
+    "and the matrix elements on top of that\n",
+    "\\begin{align}\n",
+    "\\langle \\phi_\\mu^{\\mathbf{k}} |V_{xc} |\\phi_\\nu^{\\mathbf{k}}\\rangle\n",
+    "&= \\int_\\Omega \\phi_\\mu(\\mathbf{r})^{\\mathbf{k},\\ast} V_{xc}(\\mathbf{r}) \\phi_\\nu^{\\mathbf{k}}(\\mathbf{r}) d\\mathbf{r} \\\\\n",
+    "&= \\sum_{\\mathbf{r}\\in\\text{mesh}} w(\\mathbf{r}) V_{xc}(\\mathbf{r}) \\rho_{\\mu\\nu}^{\\mathbf{k}}(\\mathbf{r})\n",
+    "\\end{align}\n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\rho_{\\mu\\nu}^{\\mathbf{k}}(\\mathbf{r}) = \\phi^{\\mathbf{k}}_\\mu(\\mathbf{r})^* \\phi^{\\mathbf{k}}_\\nu(\\mathbf{r})\n",
+    "\\end{equation}\n",
+    "\n",
+    "When calling pyscf.dft.libxc.eval_xc function, if deriv=1 is specified, $e_{xc}$ and $V_{xc}$ can be evaluated simultaneously. (Note \n",
+    "$V_{xc}$ includes two terms as shown above, not just the derivative of $e_{xc}$.)"
    ]
   },
   {
@@ -1518,18 +1589,20 @@
     "    w = get_weight(cell)\n",
     "    E_xc = w * np.einsum('x,x', rho, e_xc)\n",
     "    vxc = []\n",
-    "    # for k, kpt in enumerate(kpts2):\n",
-    "        # vxc.append(___________)\n",
+    "    for k, kpt in enumerate(kpts2):\n",
+    "        aoR = get_ao_values(cell, kpt)\n",
+    "        pair_ao = np.einsum('xi,xj->xij', aoR.conj(), aoR)\n",
+    "        vxc.append(w * np.einsum('xij,x->ij', pair_ao, v_xc))\n",
     "    return np.array(vxc), E_xc\n",
     "\n",
     "def get_vxc_ref(cell, dm, xc, kpts1, kpts2):\n",
     "    from pyscf.pbc import dft\n",
     "    mf = dft.KRKS(cell, kpts1)\n",
-    "    E_xc, vxc = mf._numint.nr_rks(cell, mf.grids, 'lda,vwn', dm, kpts=kpts1,\n",
+    "    E_xc, vxc = mf._numint.nr_rks(cell, mf.grids, xc, dm, kpts=kpts1,\n",
     "                                  kpts_band=kpts2)[1:]\n",
     "    return vxc, E_xc\n",
     "\n",
-    "TEST = 0\n",
+    "TEST = 1\n",
     "\n",
     "if TEST:\n",
     "    kpts2 = cell.make_kpts([1,3,1])\n",
@@ -1560,6 +1633,7 @@
     "get_nuc = get_nuc_ref\n",
     "get_j = get_j_ref\n",
     "get_vxc = get_vxc_ref\n",
+    "\n",
     "def get_bands(cell, mo_kpts, kpts, kpts_band):\n",
     "    nelectron = cell.nelectron\n",
     "    nocc = nelectron // 2\n",
@@ -1653,8 +1727,11 @@
     "            c_k.append(c)\n",
     "        e_k = np.array(e_k)\n",
     "        c_k = np.array(c_k)\n",
-    "        fermi = np.sort(e_k.ravel())[nkpts*nocc-1]\n",
-    "        dm = __________\n",
+    "        fermi = np.sort(e_k.ravel())[nkpts*nocc-1] # a number, energy of the fermi surface\n",
+    "        dm = [] # dm for each k-point\n",
+    "        for k in range(nkpts):\n",
+    "            where = e_k[k] <= fermi\n",
+    "            dm.append(np.einsum('pi,qi->pq', c_k[k][:,where], c_k[k][:,where].conj()) * 2)\n",
     "        \n",
     "        vxc, Exc = get_vxc(cell, dm, 'lda,vwn', kpts, kpts)\n",
     "        vj = get_j(cell, dm, kpts, kpts)\n",
@@ -1666,6 +1743,8 @@
     "        dE = abs(E - Elast)\n",
     "        print('SCF cycle', cycle, 'E(HF) =', E, 'dE =', dE)\n",
     "    return E, c_k\n",
+    "\n",
+    "TEST = 1\n",
     "\n",
     "if TEST:\n",
     "    kpts = cell.make_kpts([2,2,2])\n",
